Sun Nov  4 11:27:54 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): fix to return true when self and other
	  are resized to same size and the current index become out of
	  range.

	* test/ruby/test_array.rb: add a test for the above.

Sun Nov  4 10:19:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (file_s_fnmatch): match with expanding braces if FNM_EXTGLOB
	  is set.  [ruby-core:40037] [Feature #5422]

Sat Nov  3 23:38:15 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: modified doc.
	* rational.c: ditto.

Sat Nov  3 22:38:55 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: modified doc.

Sat Nov  3 18:35:55 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_vm_rewrite_ep_in_errinfo, vm_rewrite_ep_in_errinfo):
	  merge code and remove `rb_vm_rewrite_ep_in_errinfo'.

Sat Nov  3 18:15:24 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c, proc.c: avoid unnecessary `rb_vm_rewrite_ep_in_errinfo'
	  calls.

Sat Nov  3 17:53:43 2012  Kouhei Sutou  <kou@cozmixng.org>

	* bin/testrb: Use only Test::Unit::AutoRunner in test-unit gem
	  compatible API to be available by both test/unit bundled in Ruby
	  and test-unit gem.
	* lib/test/unit.rb (Test::Unit::AutoRunner): Move codes from testrb.

Sat Nov  3 14:56:21 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (parse_eu): should capture apostrophe too.

Sat Nov  3 14:46:15 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date__parse): revised the tight parser.

Sat Nov  3 14:43:42 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xmldecl.rb (REXML::XMLDecl#content): Add missing \A
	  and \z.

Sat Nov  3 14:42:55 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/output.rb (REXML::Output#initialize): Use normalized
	  encoding name.

Sat Nov  3 14:41:17 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/output.rb (REXML::Output): Don't output BOM in middle
	  of the output string.