@@ -1,3 +1,9 @@
+Sun Nov  4 11:47:39 2012  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* lib/fileutils.rb (module FileUtils): repatch [ruby-core:39622]
+	  [Feature #5337]. improve performance of FileUtils.compare_stream.
+	  [ruby-core:47545] [Feature #7028]
+
 Sun Nov  4 11:27:54 2012  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* array.c (recursive_equal): fix to return true when self and other
